# CppDemos

./: .gitignore
BinaryToHex/: a.out  main.cpp
BoostDemo/: BoostDemo.pro  bDate.h  bLog.h  bTimer.h  main.cpp
BoostDemo/Asio/: Asio.pro  main.cpp
BoostDemo/AsioClient/: AsioClient.pro
BoostDemo/AsioDemo/: AsioDemo.pro  main.cpp
BoostDemo/Lambda/: Lambda.pro  main.cpp
BuilderDemo/: main.cpp
CMakeProject/: CMakeLists.txt  main.cpp
CMakeProject-build/: CMakeCache.txt  cmake_install.cmake  compile_commands.json
CPPKeyWords/: main.cpp  using.h
Cpp11Feature/: lamdba.h  main.cpp  moveSemantics.h  nullptr.h  perfectForward.h  templateMeta.h
CppDemos/: main.cpp
CppDemos.xcodeproj/: project.pbxproj
CppDemos.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CppNewFeature/: CMakeLists.txt  alignas.h  chronotime.h  constexpr.h  constructor.h  decltype.h  lamdba.h  literalOperator.h  locale.h  main.cpp  multiThread.h  smartPointer.h  unicode.h
FunctionPointer/: functionTable.h  main.cpp
MetaProgram/: chapter2.cpp  chapter2.h  main.cpp
ObjectCounter/: counter.h  main.cpp
SonofGrab/English.lproj/: MainMenu.xib
StaticAssert/: main.cpp
TestCocoaProject/TestCocoaProject/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
TestCocoaProject/TestCocoaProject.xcodeproj/: project.pbxproj
TestCocoaProject/TestCocoaProjectTests/: TestCocoaProjectTests.m
VSCMake/: CMakeLists.txt
XmppDemo/: CMakeLists.txt  main.cpp
build-XmppDemo-Qt_5_7_1_clang_64-Default/: CMakeCache.txt  XmppDemo.cbp  cmake_install.cmake
(+23 files in other folders)
